--- a/install_ubuntu.tex
+++ b/install_ubuntu.tex
@@ -1,4 +1,4 @@
-% Created 2023-12-22 金 13:22
+% Created 2024-01-16 火 09:48
 \documentclass[10pt]{article}
 \usepackage{graphicx}
 \usepackage{longtable}
@@ -39,7 +39,7 @@
 \tableofcontents
 
 \subsection{Preparing and booting a Ubuntu 22.04 media}
-\label{sec:org60c099b}
+\label{sec:org6fcb429}
 An \href{https://ubuntu.com/download/amd-xilinx}{official Ubuntu image} exists and is
 provided by Xilinx, allowing the OS installation to be quick and
 straightforward.
@@ -84,7 +84,7 @@ In my case, I am using Emacs's \texttt{serial-term}:
 M-x serial-term RET /dev/ttyUSB1 RET 115200 RET
 \end{minted}
 
-The default username / password pair for the very first boot is \texttt{ubuntu} and \texttt{ubuntu}. You will then be prompted to enter a new passwork.
+The default username / password pair for the very first boot is \texttt{ubuntu} and \texttt{ubuntu}. You will then be prompted to enter a new password.
 
 Once logged in, it is typically easier and more convenient to connect the board
 using SSH. When the board is connected to the network, it is possible to know
@@ -98,12 +98,12 @@ host# ssh ubuntu@192.168.4.11
 \end{minted}
 
 \subsection{Network and admin setups}
-\label{sec:orgae2aa0d}
+\label{sec:orgc5bf5f8}
 This section presents a variety of extra convenience configurations
 that can be used when setting-up the Kria board.
 
 \subsubsection{Static IP address}
-\label{sec:org84fdfd0}
+\label{sec:orgc79e33e}
 A static IP can be set by writing the following
 configuration into your \texttt{netplan} configuration file\footnote{The \texttt{chmod} command is used to update the permissions and silence some warnings}.
 
@@ -114,7 +114,7 @@ sudo nano /etc/netplan/50-cloud-init.yaml
 \end{minted}
 
 You can then set the wanted IP as follow\footnote{For the routing part, it is key to have the \texttt{to} with a \texttt{'-'} in front of
-it; and then the \texttt{via} without, but alligned with the \texttt{t}.}:
+it; and then the \texttt{via} without, but aligned with the \texttt{t}.}:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{yaml}
 network:
   renderer: NetworkManager
@@ -139,7 +139,7 @@ sudo netplan apply
 \end{minted}
 
 \subsubsection{Proxy and DNS}
-\label{sec:orge57ecb9}
+\label{sec:org140ac9e}
 An issue that can occur when connecting the board to the internet is the
 conflicting situation with the university proxy.
 Indeed, as the network at Nanzan University requires to go through a proxy,
@@ -164,7 +164,7 @@ echo "export no_proxy=\"localhost, 127.0.0.1,::1\"" >> ~/.bashrc
 Eventually the board can be rebooted in order for the setup to get applied cleanly.
 
 \subsubsection{\texttt{root} password}
-\label{sec:org4ec0604}
+\label{sec:orge90928c}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: Depending on your use-case, the setup presented in this
 subsection can be a critical security breach as it remove the need for a root
@@ -198,8 +198,19 @@ sudo apt-get dist-upgrade
 sudo reboot now
 \end{minted}
 
+\subsubsection{Adding Xilinx specific repositories}
+\label{sec:orge7b17c6}
+The following commands will add \texttt{PPA} repositories that are specific for Xilinx boards using Ubuntu.
+It is then possible to update the package list and eventually upgrade to some new packages.
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo add-apt-repository ppa:ubuntu-xilinx/updates
+sudo add-apt-repository ppa:xilinx-apps/ppa
+sudo apt update
+sudo apt upgrade
+\end{minted}
+
 \subsubsection{Purging \texttt{snap}}
-\label{sec:orgf7de642}
+\label{sec:org881e419}
 As the desktop-specific software are not used at all in the case
 of our project, there are some packages that can be purges in order for the
 system to become more lightweight.
@@ -238,7 +249,7 @@ systemctl list-units | grep snapd
 \end{minted}
 
 \subsubsection{Other unused heavy packages}
-\label{sec:org273a048}
+\label{sec:org65f0eea}
 Some other pieces of software can safely be removed since the desktop is
 not to be used:
 
@@ -252,8 +263,28 @@ sudo reboot now
 \end{minted}
 
 \pagebreak
+
+\subsubsection{Slow boot services to disable}
+\label{sec:org5d944ff}
+These packages (in particular the first one) are taking up a LOT of time at boot while providing no benefits\footnote{The CUPS and Docker services will be activated when used instead of during boot time.}.
+
+It is possible to disable them as follow:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo systemctl disable systemd-networkd-wait-online.service
+sudo systemctl disable NetworkManager-wait-online.service
+sudo systemctl disable cups.service
+sudo systemctl disable docker.service
+sudo systemctl disable containerd.service
+sudo systemctl disable cloud-init-local.service
+\end{minted}
+
+Additional, potentially unused services can be found using the very handy command:
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo systemd-analyze blame
+\end{minted}
+
 \subsubsection{Jupyter notebook setup}
-\label{sec:orgb3095e2}
+\label{sec:org9b96978}
 Here are some instruction on how to install and setup Jupyter on a KRIA board,
 accessing it remotely and using it for making data analysis.
 
@@ -268,7 +299,7 @@ python3 -m pip install jupyter pandas numpy matplotlib scipy
 sudo reboot now
 \end{minted}
 
-Then in a terminal on your host machine (not on the KRIA board), you can run the following command\footnote{In this example, the full \texttt{username@IP} is used, but a \texttt{.ssh/config} is aslo usable.} to bind local ports:
+Then in a terminal on your host machine (not on the KRIA board), you can run the following command\footnote{In this example, the full \texttt{username@IP} is used, but a \texttt{.ssh/config} is also usable.} to bind local ports:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 ssh -L 8888:localhost:8888 ubuntu@192.168.11.107
 \end{minted}
@@ -283,16 +314,16 @@ From there, it is possible to use the displayed URL (something that looks like
 \texttt{http://localhost:8888/tree?token}) to access the remote Notebook system from a local web browser.
 It is possible to do so with \texttt{localhost} since we have the \texttt{ssh} port map connection going on.
 
-Eventually creating Notebooks and stuff, it is possible to obtain a situation like shown in the figure \ref{fig:org3cc631c} below.
+Eventually creating Notebooks and stuff, it is possible to obtain a situation like shown in the figure \ref{fig:org335b911} below.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/jupyter.png}
-\caption{\label{fig:org3cc631c}A test Jupyter Notebook for CSV data analysis.}
+\caption{\label{fig:org335b911}A test Jupyter Notebook for CSV data analysis.}
 \end{figure}
 
 \subsubsection{Enabling \texttt{remoteproc} with Device-Tree Overlay patching}
-\label{sec:org4f39c4a}
+\label{sec:orgf65e5a4}
 One of the advantage of this Kria board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
@@ -328,13 +359,14 @@ sudo dtc /sys/firmware/fdt 2> /dev/null > system.dts
 
 Then, a custom-made patch file can be downloaded and applied.
 This file is available at the URL visible in the command below
-but also in this report appendix \ref{sec:orgdeef376}.
+but also in this report appendix \ref{sec:orgf0d3655}.
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
-wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/raw/b7300116e153f4b5a1542f8804e4646db8030033/src/system.patch
+wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/raw/90aca1dfe54875384c1962b75570c33d4b4fec00/src/system.patch
 
 patch system.dts < system.patch
 \end{minted}
+
 
 As for the board to be able to reserve the correct amount of memory with the new settings, some
 \texttt{cma} kernel configuration is needed\footnote{The overlapping memory will not prevent the board to boot,
@@ -370,14 +402,14 @@ ready to be used!
 \pagebreak
 
 \subsubsection{Installing Docker}
-\label{sec:orgd09106e}
+\label{sec:org4fe5214}
 It is possible to have a version of Docker installed simply by using the available repository,
 but since we are on Ubuntu, a PPA is available from Docker in order to have the most up-to-date version.
 
 Following \href{https://docs.docker.com/engine/install/ubuntu/\#install-using-the-repository}{the official documentation}, the following steps can be taken to install the latest version of
 Docker on a Ubuntu system. The last command is meant to test the install.
 If everything went smoothly, you should see something similar to what is presented
-in the figure \ref{fig:org9c5d93f} below, after the commands:
+in the figure \ref{fig:org3941bd7} below, after the commands:
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 sudo apt-get update
@@ -408,14 +440,50 @@ docker run hello-world
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.7\textwidth]{./img/hello-docker.png}
-\caption{\label{fig:org9c5d93f}The return of a successful run of the \texttt{hello world} test Docker container.}
+\caption{\label{fig:org3941bd7}The return of a successful run of the \texttt{hello world} test Docker container.}
 \end{figure}
+
+\subsubsection{Adding a swap partition}
+\label{sec:org2975858}
+This part is very optional, in particular as it might slow down a bit the
+boot time of the board (\textasciitilde{}2s), however it might become handy to have swap memory
+available to avoid system failure under heavy use.
+
+This whole procedure must be done externally, with the board system SD card
+mounted on a host PC as an external volume.  As it is highly platform dependant,
+I will not give a detailed explanation on how to do it, yet here are the key
+points that should be done:
+\begin{itemize}
+\item Shutdown the Kria board, take out the SD card and put it in a host machine.
+\item Make sure the disk is visible.
+\item Make sure all volumes are \textbf{unmounted}.
+\item Resize the main \texttt{root} partition (\textbf{not} the \texttt{boot}) so a space the size of the
+wanted swap is free \textbf{after} the partition. You'd want something around 1GB.
+\item In the empty space, create a new partition, which type is "linux swap".
+\item Find and take note of the UUID of the new partition. This is useful hereafter.
+\item \texttt{sync}
+\item Un-mount everything, eject SD card.
+\item Put the SD card back in the Kria.
+\item Boot back to Ubuntu.
+\end{itemize}
+
+Going back on the Kria board Ubuntu after boot, the \texttt{/etc/fstab} file can be
+updated as follow, modulo your actual UUID for the newly created partition, to
+enable swap at boot time.
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+sudo -s
+echo "UUID=8b13ed05-a91d-4x50-a44a-e654a0c67a2c none   swap    sw      0       0" >> /etc/fstab
+reboot now
+\end{minted}
+
+\subsubsection{{\bfseries\sffamily TODO} Using a PetaLinux kernel in Ubuntu}
+\label{sec:orgb39b985}
 
 
 \pagebreak
 \appendix
 \section{DTO patch}
-\label{sec:orgdeef376}
+\label{sec:orgf0d3655}
 This file is available in this repository: \href{https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/blob/b7300116e153f4b5a1542f8804e4646db8030033/src/system.patch}{system.patch}
 \inputminted[linenos, frame=single]{diff}{./src/system.patch}
 \end{document}
