--- a/README.org
+++ b/README.org
@@ -122,210 +122,14 @@ are trying to archive.
 #+INCLUDE: "./install_ubuntu.org" :minlevel 2 :lines "34-469"
 ** COMMENT LINK: [[id:582fe4ef-a301-4b53-b908-a5c2b5b6d694][KRIA board Ubuntu LTS 22.04 Install]]
 
-* Building an example RPMsg real-time firmware
-As visible on the official [[https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware][Xilinx documentation about building a demo firmware]],
-this section will present the required steps for building a new firmware for the R5F
-core of our Kria board.
-
-The goal here is to have a demonstration firmware running,
-able to use the RPMsg system to communicate with the Linux APU.
-The figure [[fig:map_microros]] below shows where the real-time firmware
-is positioned in the global project.
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: The FreeRTOS firmware and it's application (red border) are
-#+CAPTION: running on the real-time capable side of the Kria CPU.
-#+CAPTION: A micro-ROS application is shown here, but any real-time firmware will
-#+CAPTION: be deployed in the same way.
-#+NAME: fig:map_microros
-[[file:./img/map_microros.png]]
-
-** Setting up the IDE
-Xilinx's Vitis IDE is the recommended tool used to build software for the Xilinx boards.
-It also include the tools to interact with the FPGA part, making the whole
-software very large (around 200GB of disk usage).
-
-However, this large tool-set allows for a convenient development environment, in particular
-in our case where some FreeRTOS system, with many dependencies is to be build.
-
-The installer can be found on [[https://www.xilinx.com/support/download/index.html/content/xilinx/en/downloadNav/vitis.html][Xilinx download page]]. You will need to get
-a file named something like ~Xilinx_Unified_2022.2_1014_8888_Lin64.bin~[fn:6].
-
-Vitis IDE installer is compatible with versions of Ubuntu, among other distributions,
-but not officially yet for the 22.04 version.
-Furthermore, the current install was tested on Pop OS, a distribution derived from Ubuntu.
-However, even with this more unstable status, no major problems were encountered
-with this tool during the development stages.
-
-This guide will present a setup procedure that supposedly works for all distributions based on the newest
-LTS from Ubuntu. For other Linux distributions or operating system, please refer to the official documentation.
-
-*** Dependencies & installation
-Some packages are required to be installed on the host system
-in order for the installation process to happen successfully:
-
-#+BEGIN_SRC sh
-sudo apt-get -y update
-
-sudo apt-get -y install libncurses-dev \
-     ncurses-term \
-     ncurses-base \
-     ncurses-bin \
-     libncurses5 \
-     libtinfo5 \
-     libncurses5-dev \
-     libncursesw5-dev
-#+END_SRC
-
-Once this is done, the previously downloaded binary installer can be executed:
-
-#+BEGIN_SRC sh
-./Xilinx_Unified_2022.2_1014_8888_Lin64.bin
-#+END_SRC
-
-If it is not possible to run the previous command, make the file executable with the ~chmod~ command:
-
-#+BEGIN_SRC sh
-sudo chmod +x ./Xilinx_Unified_2022.2_1014_8888_Lin64.bin
-#+END_SRC
-
-From there you can follow the step-by-step graphical installer.
-The directory chosen for the rest of this guide for the Xilinx directory
-is directly the ~$HOME~, but the installation can be set elsewhere is needed.
-
-#+LATEX: \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
-*WARNING*: This whole procedure can take up to multiple hours to complete
-and is prone to failures (regarding missing dependencies, typically),
-so your schedule should be arranged accordingly.
-#+LATEX: \end{tcolorbox}
-
-*** Platform configuration file generation
-In order to have the libraries and configurations in the IDE ready to be used for our board,
-we need to obtain some configuration files that are specific for the Kria KV260,
-as presented in the [[https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa][Xilinx guide for Kria and Vitis]].
-
-A Xilinx [[https://github.com/Xilinx/kria-vitis-platforms][dedicated repository]] is available for us to download  such configurations,
-but they required to be built.
-
-As for the dependencies, ~Cmake~, ~tcl~ and ~idn~ will become needed in order to build the firmware.
-Regarding ~idn~, some version issue can happen, but as discussed [[https://support.xilinx.com/s/question/0D52E00006jrzsYSAQ/platform-project-cannot-be-created-on-vitis?language=en\_US][in a thread on Xilinx's forum]],
-if ~libidn11~ is specifically required but not available (it is the case for Ubuntu 22.04),
-creating a symbolic link from the current, 12 version works as a workaround.
-
-Here are the steps for installing the dependencies and building this configuration file:
-
-#+BEGIN_SRC sh
-sudo apt-get update
-sudo apt-get install cmake tcl libidn11-dev \
-     libidn-dev libidn12 idn
-sudo ln -s /usr/lib/x86_64-linux-gnu/libidn.so.12 \
-     /usr/lib/x86_64-linux-gnu/libidn.so.11
-
-cd ~/Xilinx
-git clone --recursive \
-    https://github.com/Xilinx/kria-vitis-platforms.git
-cd kria-vitis-platforms/k26/platforms
-export XILINX_VIVADO=/home/$USER/Xilinx/Vivado/2022.2/
-export XILINX_VITIS=/home/$USER/Xilinx/Vitis/2022.2/
-make platform PLATFORM=k26_base_starter_kit
-#+END_SRC
-
-** Setting up and building a new project for the Kria board
-With the platform configuration files available, we can now use the IDE to generate a
-new project for our board. The whole process will be described with screen captures and
-captions.
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: We are starting with creating a "New Application Project"
-#+CAPTION: You should be greeted with this wizard window. Next.
-#+NAME: fig:project1
-[[file:./img/vitis_new/project1.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: For the platform, we need to get our build Kria configuration.
-#+CAPTION: In the "Create a new platform" tab,
-#+CAPTION: click the "Browse..." button.
-#+NAME: fig:project2
-[[file:./img/vitis_new/project2.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: In the file explorer, we should navigate in the "k26" directory,
-#+CAPTION: where the configuration file was build.
-#+CAPTION: From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.
-#+NAME: fig:project3
-[[file:./img/vitis_new/project3.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: With the configuration file loaded, we can now select a name for our
-#+CAPTION: platform, but most importantly, we have to select the "psu Cortex5 0" core as a target.
-#+CAPTION: The other, Cortex 53 is the APU running Linux.
-#+NAME: fig:project4
-[[file:./img/vitis_new/project4.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: In this next window, we can give a name to our firmware project.
-#+CAPTION: It is also critical here to select the core we want to build for.
-#+CAPTION: Once again, we want to use the "psu cortex5 0".
-#+NAME: fig:project5
-[[file:./img/vitis_new/project5.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: Here, we want to select "freertos10 xilinx" as our Operating System.
-#+CAPTION: The rest can remain unchanged.
-#+NAME: fig:project6
-[[file:./img/vitis_new/project6.png]]
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: Finally, we can select the demonstration template we are going to use;
-#+CAPTION: here we go with "OpenAMP echo-test" since we want to
-#+CAPTION: have some simple try of the RPMsg system. Finish.
-#+NAME: fig:project7
-file:./img/vitis_new/project7.png
 
 #+LATEX: \pagebreak
-In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the ~script.ld~ file.
-The values in the figure [[fig:projectmem]] below look different from what could be set in the DTO for the Linux side, but they appear to
-work for the example we are running, including the new DTO patch without overlapping memory:
+* Setting up a Vitis IDE project
+#+INCLUDE: "./vitis_ide.org" :minlevel 2 :lines "34-"
+** COMMENT LINK: [[id:dfc7e5d2-fe7b-432e-8dcc-e1227929fc62][KRIA board Vitis IDE setup]]
 
-
-#+ATTR_LATEX: :width .6\textwidth
-#+CAPTION: lscript.ld memory configuration for the firmware memory setup.
-#+CAPTION: The same file is available as a whole in this repository's src directory.
-#+NAME: fig:projectmem
-file:./img/vitis_new/project_mem.png
-
-
-Once your example project is built and you have a ~.elf~ file available, you can
-jump directly to the [[Loading the firmware]] section to see how to deploy and use your firmware.
-
-The section in between will present setup specifically needed for micro-ROS.
-
-** Enabling the Stream Buffer system
-This is a subpart in the general configuration in the project related to some specific
-functions for FreeRTOS threads messaging system, however, this point in particular
-created so much pain I needed to include in early in this guide for not to forget about it
-and keeping a clear track on how to enable this setting.
-
-Indeed, two settings need to be enabled in order to be able to call
-functions such as ~xMessageBufferCreate~, useful when working with tasks
-in FreeRTOS, as visible in the figure [[fig:streambuffer]] below:
-
-#+ATTR_LATEX: :width .8\textwidth
-#+CAPTION: Enabling Stream Buffer in the Vitis IDE setting: this is a setting that can
-#+CAPTION: be found in the "platform.spr" element of your project (the platform, not the firmware
-#+CAPTION: project itself). From that file, you can access the settings with the button "Modify BSP Settings",
-#+CAPTION: and then as visible, in the tab ~freertos10_xilinx~, it is needed to toggle
-#+CAPTION: here the ~stream_buffer~ setting
-#+CAPTION: in the ~kernel_features~, from the default "false" to "true".
-#+NAME: fig:streambuffer
-[[file:./img/streambuffer.png]]
-
-#+LATEX: \pagebreak
-The second setting is useful in the case when a buffer callback function is used, such as\\
-~xMessageBufferCreateWithCallback~.
-In that case, you must include ~#define configUSE_SB_COMPLETED_CALLBACK 1~ on the top of you header
-file (in our project, this will happen in the ~microros.h~ header file),
-before the ~#include "FreeRTOS.h"~ in order to override the setting from this include.
+* TODO R5F firmware without an IDE
+SCHEDULED: <2024-01-31 水 13:00>
 
 
 #+LATEX: \pagebreak
@@ -1400,9 +1204,6 @@ and [[Custom Colcon meta settings]] the end of this report.}
 
 [fn:8] If Docker is not set up on your machine, you can follow the guide on [[https://docs.docker.com/engine/install/ubuntu/][the official website]].
 When you can successfully run the "hello-world" container, you are good to go.
-
-[fn:6] The name of the installer binary file might change as a new version of the IDE
-is release every year or so.
 
 * References
 [[bibliographystyle:ieeetr]]
