--- a/install_ubuntu.org
+++ b/install_ubuntu.org
@@ -405,7 +405,7 @@ in the figure [[fig:hello-docker]] below, after the commands:
 
 #+BEGIN_SRC sh
 sudo apt-get update
-sudo apt-get install ca-certificates
+sudo apt-get install ca-certificates curl
 sudo install -m 0755 -d /etc/apt/keyrings
 curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
     sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
