--- a/vitis_ide.tex
+++ b/vitis_ide.tex
@@ -1,4 +1,4 @@
-% Created 2024-01-31 水 14:00
+% Created 2024-04-25 Thu 09:53
 \documentclass[10pt]{article}
 \usepackage{graphicx}
 \usepackage{longtable}
@@ -31,7 +31,7 @@
  pdftitle={KRIA board Vitis IDE setup},
  pdfkeywords={},
  pdfsubject={A guide to setup Xilinx's Vitis IDE},
- pdfcreator={Emacs 30.0.50 (Org mode 9.6.10)}, 
+ pdfcreator={Emacs 30.0.50 (Org mode 9.6.15)}, 
  pdflang={English}}
 \begin{document}
 
@@ -39,7 +39,7 @@
 \tableofcontents
 
 \section{Setting up the IDE}
-\label{sec:org488b9b8}
+\label{sec:orgaab99e2}
 Xilinx's Vitis IDE is the recommended tool used to build software for the Xilinx boards.
 It also include the tools to interact with the FPGA part, making the whole
 software very large (around 200GB of disk usage).
@@ -61,7 +61,7 @@ This guide will present a setup procedure that supposedly works for all distribu
 LTS from Ubuntu. For other Linux distributions or operating system, please refer to the official documentation.
 
 \subsection{Dependencies \& installation}
-\label{sec:org7d10043}
+\label{sec:orgaf82952}
 Some packages are required to be installed on the host system
 in order for the installation process to happen successfully:
 
@@ -100,8 +100,21 @@ and is prone to failures (regarding missing dependencies, typically),
 so your schedule should be arranged accordingly.
 \end{tcolorbox}
 
-\subsection{Platform configuration file generation}
-\label{sec:org5a1b717}
+\subsection{Platform configuration file}
+\label{sec:orgff0e41a}
+With a Xilinx account, a \texttt{.bsp} archive can be downloaded for the taget platform\footnote{\url{https://www.xilinx.com/member/forms/download/xef.html?filename=xilinx-kr260-starterkit-v2022.2-10141622.bsp}}.
+
+Once the file is downloaded, the following commands allows to "un-tar" it,
+making th needed \texttt{.xsa} file accessible via a file explorer.
+
+\begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
+tar xvfz xilinx-kr260-starterkit-v2022.2-10141622.bsp
+ls xilinx-kr260-starterkit-2022.2/hardware/xilinx-kr260-starterkit-2022.2/
+\end{minted}
+
+
+\subsection{[DEPRECATED] Platform configuration file generation}
+\label{sec:org2791af4}
 In order to have the libraries and configurations in the IDE ready to be used for our board,
 we need to obtain some configuration files that are specific for the Kria KV260,
 as presented in the Xilinx guide for Kria and Vitis\footnote{\url{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build\_vitis\_platform.html?highlight=xsa}}.
@@ -132,8 +145,9 @@ export XILINX_VITIS=/home/$USER/Xilinx/Vitis/2022.2/
 make platform PLATFORM=k26_base_starter_kit
 \end{minted}
 
+
 \section{Setting up and building a new project for the Kria board}
-\label{sec:orgf50cf38}
+\label{sec:orgf82e7be}
 With the platform configuration files available, we can now use the IDE to generate a
 new project for our board. The whole process will be described with screen captures and
 captions.
@@ -141,55 +155,55 @@ captions.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project1.png}
-\caption{\label{fig:org05b1f34}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
+\caption{\label{fig:orgeac335c}We are starting with creating a "New Application Project" You should be greeted with this wizard window. Next.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project2.png}
-\caption{\label{fig:org501bcd6}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
+\caption{\label{fig:orga1317b3}For the platform, we need to get our build Kria configuration. In the "Create a new platform" tab, click the "Browse\ldots{}" button.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project3.png}
-\caption{\label{fig:org63bc92d}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
+\caption{\label{fig:org755e61c}In the file explorer, we should navigate in the "k26" directory, where the configuration file was build. From here we are looking for a ".xsa" file, located in a "hw" directory, as visible.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project4.png}
-\caption{\label{fig:orgb373e10}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
-\end{figure}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=.6\textwidth]{./img/vitis_new/project5.png}
-\caption{\label{fig:orgad200a0}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
+\caption{\label{fig:org7f6da0d}With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the "psu Cortex5 0" core as a target. The other, Cortex 53 is the APU running Linux.}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project6.png}
-\caption{\label{fig:org712f966}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
+\caption{\label{fig:orgdcab258}Here, we want to select "freertos10 xilinx" as our Operating System. The rest can remain unchanged.}
+\end{figure}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.6\textwidth]{./img/vitis_new/project5.png}
+\caption{\label{fig:orgd1c752d}In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for. Once again, we want to use the "psu cortex5 0".}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project7.png}
-\caption{\label{fig:org9e21da7}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
+\caption{\label{fig:orgab81012}Finally, we can select the demonstration template we are going to use; here we go with "OpenAMP echo-test" since we want to have some simple try of the RPMsg system. Finish.}
 \end{figure}
 
 \pagebreak
 In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the \texttt{script.ld} file.
-The values in the figure \ref{fig:org8cc0b5a} below look different from what could be set in the DTO for the Linux side, but they appear to
+The values in the figure \ref{fig:org36c049c} below look different from what could be set in the DTO for the Linux side, but they appear to
 work for the example we are running, including the new DTO patch without overlapping memory:
 
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{./img/vitis_new/project_mem.png}
-\caption{\label{fig:org8cc0b5a}lscript.ld memory configuration for the firmware memory setup. The same file is available as a whole in this repository's src directory.}
+\caption{\label{fig:org36c049c}lscript.ld memory configuration for the firmware memory setup. The same file is available as a whole in this repository's src directory.}
 \end{figure}
 
 
@@ -200,7 +214,7 @@ The section in between will present setup specifically needed for micro-ROS.
 
 
 \section{Enabling the Stream Buffer system}
-\label{sec:org8a5ff9b}
+\label{sec:org91dfb19}
 This is a subpart in the general configuration in the project related to some specific
 functions for FreeRTOS threads messaging system, however, this point in particular
 created so much pain I needed to include in early in this guide for not to forget about it
@@ -208,12 +222,12 @@ and keeping a clear track on how to enable this setting.
 
 Indeed, two settings need to be enabled in order to be able to call
 functions such as \texttt{xMessageBufferCreate}, useful when working with tasks
-in FreeRTOS, as visible in the figure \ref{fig:orgcbc7f41} below:
+in FreeRTOS, as visible in the figure \ref{fig:org008aca9} below:
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.8\textwidth]{./img/streambuffer.png}
-\caption{\label{fig:orgcbc7f41}Enabling Stream Buffer in the Vitis IDE setting: this is a setting that can be found in the "platform.spr" element of your project (the platform, not the firmware project itself). From that file, you can access the settings with the button "Modify BSP Settings", and then as visible, in the tab \texttt{freertos10\_xilinx}, it is needed to toggle here the \texttt{stream\_buffer} setting in the \texttt{kernel\_features}, from the default "false" to "true".}
+\caption{\label{fig:org008aca9}Enabling Stream Buffer in the Vitis IDE setting: this is a setting that can be found in the "platform.spr" element of your project (the platform, not the firmware project itself). From that file, you can access the settings with the button "Modify BSP Settings", and then as visible, in the tab \texttt{freertos10\_xilinx}, it is needed to toggle here the \texttt{stream\_buffer} setting in the \texttt{kernel\_features}, from the default "false" to "true".}
 \end{figure}
 
 \pagebreak
@@ -224,5 +238,5 @@ file (in our project, this will happen in the \texttt{microros.h} header file),
 before the \texttt{\#include "FreeRTOS.h"} in order to override the setting from this include.
 
 \section{Importing an existing project}
-\label{sec:orgaa1fef9}
+\label{sec:orgbfa479a}
 \end{document}
